--- a/app/views/routes/index.html.haml
+++ b/app/views/routes/index.html.haml
@@ -1,5 +1,4 @@
 %br
-%br
 %h3 Routes
 %br 
 = link_to 'New Route', new_route_path
@@ -9,7 +8,7 @@
 %br
 = will_paginate @routes
 %br
-%table.table.table-bordered.table-striped.table-hover{:style => 'width: 50%;'}
+%table.table.table-bordered.table-striped.table-hover
   .thead
     %th{:style=>'text-align:left; background-color: lightblue;'}
       URI
