--- a/app/views/dashboard/overview.html.haml
+++ b/app/views/dashboard/overview.html.haml
@@ -7,3 +7,7 @@
   %br
   .box{:style=>"text-align: center"}
     = link_to 'Matchers', matchers_path, {:style => "font-size:15px;"}
+%br
+  %br
+  .box{:style=>"text-align: center"}
+    = link_to 'Logs', request_logs_path, {:style => "font-size:15px;"}
