added schema validation for input xml

--- a/app/views/dashboard/overview.html.haml
+++ b/app/views/dashboard/overview.html.haml
@@ -11,3 +11,6 @@
   %br
   .box{:style=>"text-align: center"}
     = link_to 'Logs', request_logs_path, {:style => "font-size:15px;"}
+%br
+  .box{:style=>"text-align: center"}
+    = link_to 'Schema Validators', xml_validators_path, {:style => "font-size:15px;"}
