--- a/app/views/routes/_form.html.haml
+++ b/app/views/routes/_form.html.haml
@@ -1,4 +1,4 @@
-= form_for @route, :html => {:class => "form-horizontal"} do |f|
+= nested_form_for @route, :html => {:class => "form-horizontal"} do |f|
   - if @route.errors.any?
     #error_explanation
       %h2
@@ -13,13 +13,17 @@
     .control-group
       .fields
         = f.label :kind, "Kind", :class => 'control-label'
-        = f.select :kind, options_for_select(Route.options_for_kind)
+        = f.select :kind, options_for_select(Route.options_for_kind, @route.kind)
     .control-group
       = f.label :http_method, "HTTP Method", :class => 'control-label'
-      = f.select :http_method, options_for_select(Route.options_for_http_method)
+      = f.select :http_method, options_for_select(Route.options_for_http_method, @route.http_method)
     .control-group
       = f.label :uri, "URI", :class => 'control-label'
       = f.text_field :uri
+    .control-group
+      = f.label :schema_validator, "Schema Validator", :class => 'control-label'
+      = f.select :schema_validator, options_for_select(XmlValidator.all.map {|u| [u.name, u.name]})
+
   %br
   %h3 Select Macther(s) :
   %table.table.table-bordered.table-striped.table-hover
