--- a/app/views/matchers/show.html.haml
+++ b/app/views/matchers/show.html.haml
@@ -1,6 +1,7 @@
 .show_ticket
   .header-form-main{:style=>'background-color: #F1F2F8; width: 100%; height: 630px; display: inline-block;'}
     #ticket-details
+      =link_to 'Route', @matcher.route
       %br
       %h3
         Matcher Details:
