added validation for the response content-type

--- a/app/views/matchers/show.html.haml
+++ b/app/views/matchers/show.html.haml
@@ -3,6 +3,8 @@
     #ticket-details
       =link_to 'Route', @matcher.route
       %br
+      %br
+      =link_to 'Edit', edit_matcher_path
       %h3
         Matcher Details:
       %table.table.table-bordered.table-striped.table-hover
