changing ditto logo

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -56,7 +56,7 @@ $wide-screen: 1200px
       display: table
       line-height: 0
     .brand
-      background: image-url('qg-small.jpg') no-repeat center center
+      background: image-url('logo.png') no-repeat center center
       font-size: 17px
       float: left
       margin-top: -5px
