--- a/app/views/dashboard/overview.html.haml
+++ b/app/views/dashboard/overview.html.haml
@@ -2,6 +2,10 @@
 %br
 .slide-container
   .box{:style=>"text-align: center"}
+    = link_to 'Systems', systems_path, {:style => "font-size:15px;"}
+  %br
+  %br
+  .box{:style=>"text-align: center"}
     = link_to 'Routes', routes_path, {:style => "font-size:15px;"}
   %br
   %br
