--- a/app/views/routes/_form.html.haml
+++ b/app/views/routes/_form.html.haml
@@ -11,6 +11,12 @@
     = f.label ' '
   .form-main{:style => 'width:100%'}
     .control-group
+      = f.label :hidden, "Hidden?", :class => 'control-label'
+      = f.check_box :hidden, {},"Y","N"
+      %br
+      %span{style: 'color: #666666'}
+        Note: If selected, then route will not be editable in future.
+    .control-group
       .fields
         = f.label :kind, "Kind", :class => 'control-label'
         = f.select :kind, options_for_select(Route.options_for_kind, @route.kind)
