Services and Test Cases

--- a/app/views/dashboard/overview.html.haml
+++ b/app/views/dashboard/overview.html.haml
@@ -6,6 +6,10 @@
   %br
   %br
   .box{:style=>"text-align: center"}
+    = link_to 'Services', services_path, {:style => "font-size:15px;"}
+  %br
+  %br
+  .box{:style=>"text-align: center"}
     = link_to 'Routes', routes_path, {:style => "font-size:15px;"}
   %br
   %br
