Support for XSLs and form-urlencoded

--- a/app/views/dashboard/overview.html.haml
+++ b/app/views/dashboard/overview.html.haml
@@ -22,3 +22,6 @@
 %br
   .box{:style=>"text-align: center"}
     = link_to 'Schema Validators', xml_validators_path, {:style => "font-size:15px;"}
+%br
+  .box{:style=>"text-align: center"}
+    = link_to 'XSLs', xsls_path, {:style => "font-size:15px;"}
